--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -28,6 +28,10 @@
             width: 330px;
             height: 60px;
         }
+        &_submit {
+            width: 301px;
+            height: 60px;
+        }
     }
 }
 
@@ -110,6 +114,10 @@
             margin-top: 48px;
             font-size: 16px;
         }
+        &_submit {
+            width: 290px;
+            font-size: 16px;
+        }
     }
     .promo {
         &__icons {
@@ -151,6 +159,22 @@
         }
         &__descr {
             margin-top: 5px;
+        }
+    }
+    .consultation {
+        padding: 100px 10px 108px 10px;
+        &__descr {
+            font-size: 17px;
+        }
+    }
+    .feed-form {
+        width: 290px;
+        input {
+            height: 45px;
+            margin-bottom: 10px;
+            &:nth-child(3) {
+                margin-bottom: 15px;
+            }
         }
     }
 }
