--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,10 @@
         font-size: 16px;
         line-height: 25px;
     }
+    &_submit {
+        width: 100%;
+        height: 58px;
+        border-radius: 5px;
+        font-size: 16px;
+    }
 }
