--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,6 @@
 @import 'blocks/buttons.scss';
 @import 'blocks/advantages.scss';
 @import 'blocks/titles.scss';
+@import 'blocks/consultation.scss';
+@import 'blocks/forms.scss';
 @import 'base/media.scss';
