--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables.scss';
+@import 'base/mixins';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -6,6 +7,7 @@
 .container {
     max-width: 950px;
     margin: 0 auto;
+    position: relative;
 }
 
 @import 'blocks/promo.scss';
@@ -15,4 +17,7 @@
 @import 'blocks/titles.scss';
 @import 'blocks/consultation.scss';
 @import 'blocks/forms.scss';
+@import 'blocks/carousel.scss';
+
+
 @import 'base/media.scss';
