--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,8 @@
     position: relative;
 }
 
+
+
 @import 'blocks/promo.scss';
 @import 'blocks/header.scss';
 @import 'blocks/buttons.scss';
@@ -18,6 +20,7 @@
 @import 'blocks/consultation.scss';
 @import 'blocks/forms.scss';
 @import 'blocks/carousel.scss';
-
+@import 'blocks/catalog.scss';
+@import 'blocks/reviews.scss';
 
 @import 'base/media.scss';
