--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -84,7 +84,7 @@
             color: $main-color;
             text-transform: uppercase;
             &:hover {
-                color: $main-color;
+                color: #e90101;
             }
         }
         hr {
@@ -166,7 +166,7 @@
             color: $main-color;
             text-transform: uppercase;
             &:hover {
-                color: $main-color;
+                color: #e90101;
             }
         }
     }
