--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -7,5 +7,10 @@
     img {
         height: 51px;
         width: 30px;
+        transition: 0.3s all;
+        &:hover {
+            transform: translateX(10px);
+        }
     }
+    
 }
