--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -26,7 +26,7 @@
         text-decoration: none;
         &:hover {
             color: white;
-            text-decoration: none;
+            text-decoration: underline;
         }
     }
     &__contacts {
