--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,5 +22,6 @@
 @import 'blocks/carousel.scss';
 @import 'blocks/catalog.scss';
 @import 'blocks/reviews.scss';
+@import 'blocks/footer.scss';
 
 @import 'base/media.scss';
