--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,5 +23,6 @@
 @import 'blocks/catalog.scss';
 @import 'blocks/reviews.scss';
 @import 'blocks/footer.scss';
+@import 'blocks/modal.scss';
 
 @import 'base/media.scss';
