--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -273,4 +273,24 @@
             line-height: 17px;
         }
     }
+
+    .modal {
+        width: 70vw;
+        padding: 27px 20px 30px 20px;
+        min-height: 350px;
+        input, button {
+            width: 100%;
+            font-size: 13px;
+        }
+        .feed-form {
+            width: 100%;
+        }
+        &__subtitle {
+            font-size: 16px;
+            line-height: 20px;
+        }
+        &__descr {
+            font-size: 12px;
+        }
+    }
 }
