--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -39,3 +39,10 @@
         }
     }
 }
+
+.animated__icon {
+    animation: heartbeat 1s infinite paused;
+    &:hover {
+        animation-play-state: running;
+    }
+}
