--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'base/variables.scss';
 @import 'base/mixins';
+@import 'base/animations.scss';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -24,5 +25,6 @@
 @import 'blocks/reviews.scss';
 @import 'blocks/footer.scss';
 @import 'blocks/modal.scss';
+
 
 @import 'base/media.scss';
