--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,6 @@
+@import 'libs/bootstrap-reboot.min.scss';
+@import 'libs/fonts.scss';
+
 @import 'base/variables.scss';
 @import 'base/mixins';
 @import 'base/animations.scss';
